<resources>
    <string name="app_name">디씨 알라미</string>
    <string name="notification_content">새로운 개시글 감시 하는 중...</string>

    <string name="add_gallery_title">새 갤러리 추가</string>
    <string name="add_gallery_from_uuid">ID 값으로 추가</string>
    <string name="add_gallery_from_web">브라우저로 찾기</string>

    <string name="settings_title">설정</string>
    <string name="settings_keyword">키워드 관리</string>
    <string name="settings_gallery">갤러리 관리</string>

    <string name="keyword_title">알림 키워드 관리</string>
    <string name="keyword_editor_hint">추가할 키워드를 입력</string>
    <string name="keyword_empty">키워드를 입력해주세요.</string>
    <string name="keyword_delete_q">이 키워드를 삭제할까요?</string>
    <string name="keyword_exsit">이미 등록된 키워드 입니다.</string>

    <string name="add_gallery_from_uuid_ex">예) bang_dream</string>
    <string name="add_gallery_from_uuid_content">예) https://gall.dcinside.com/mgallery/board/lists/?id=bang_dream 갤러리 주소에서 id 인자값을 입력하세요.</string>
    <string name="is_miner_gallery">마이너 갤러리 입니다.</string>

    <string name="execute_isvalid">유효성 검사 중...</string>
    <string name="execute_is_unvalid">유효하지 않은 갤러리 입니다.\n개시글이 있는지, 마이너 갤러리인지 다시 확인하세요.</string>
    <string name="execute_isvalid_err">유효성 검사 오류</string>
    <string name="execute_unvalid_err">유효하지 않은 갤러리 입니다.\n다시 시도하거나 다른 갤러리를 선택하세요.</string>
    <string name="targeted_gallery">이미 등록된 갤러리 입니다.</string>

    <string name="execute_succ">갤러리가 등록되었습니다.</string>

    <string name="gallery_list_activity_title">등록된 갤러리 리스트</string>
    <string name="gallery_list_delete_q">이 갤러리를 삭제할까요?</string>
    <string name="delete_positive">삭제</string>

    <string name="save">저장</string>
    <string name="cancel">취소</string>

    <string name="gallery_default_url">http://gall.dcinside.com/mgallery/board/lists/?id=</string>
</resources>
