<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:id="@+id/main_title_add_gallery"
        android:text="@string/add_gallery_title"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/main_title_add_gallery_hr"
        android:background="@color/colorDarkWhite"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/main_title_add_gallery"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/main_add_gallery_cont"
        app:layout_constraintTop_toBottomOf="@id/main_title_add_gallery_hr"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <Button
            android:id="@+id/dc_galladd_fromid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBlue"
            android:text="@string/add_gallery_from_uuid"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/dc_galladd_fromweb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBlue"
            android:text="@string/add_gallery_from_web"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:id="@+id/main_title_settings"
        android:text="@string/add_gallery_title"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/main_add_gallery_cont"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/main_title_settigs_hr"
        android:background="@color/colorDarkWhite"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/main_title_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/main_title_settigs_hr"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <!-- 갤러리 목록으로 이동 -->
        <Button
            android:id="@+id/dc_settings_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorWhiteGray"
            android:text="@string/settings_gallery"
            android:textColor="@color/colorWhite"/>

        <!-- 키워드 목록으로 이동 -->
        <Button
            android:id="@+id/dc_settings_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorGray"
            android:text="@string/settings_keyword"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>